deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: flask-app
        image: tushar3145/url-shortener:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: db-storage
          mountPath: /app/database.db
          subPath: database.db
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
